# hotsheet

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  eslint.config.mjs  package-lock.json  package.json  playwright.config.smoke.ts  playwright.config.ts  tsconfig.json  tsup.config.ts  vitest.config.ts
.claude/: settings.json
.github/: dependabot.yml
.hotsheet/: settings.json
docs/: 1-overview.md  10-desktop-app.md  100-server-driven-worker-launch.md  101-prompt-based-worker-management.md  102-per-worker-git-state-and-review.md  103-command-button-target-picker.md  104-worker-worktree-auto-approve.md  105-worktree-node-modules-provisioning.md  106-integration-helpers-ready-signal-and-gates.md  107-custom-views-local-customization.md  108-custom-commands-local-customization.md  13-app-icon.md  (+107 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/apple-fm-helper/: main.swift
src-tauri/capabilities/: default.json  remote-localhost.json
src-tauri/icons/: icon.icns
src-tauri/icons/variants/: variant-1.icns  variant-2.icns  variant-3.icns  variant-4.icns  variant-5.icns  variant-6.icns  variant-7.icns  variant-8.icns  variant-9.icns
src-tauri/loading/: index.html  welcome.html
src-tauri/permissions/autogenerated/: check_cli_installed.toml  confirm_quit.toml  get_pending_update.toml  pick_folder.toml  quicklook.toml  request_attention.toml  request_attention_once.toml  save_file.toml  set_app_icon.toml  set_window_title.toml  tts_speak.toml  tts_stop.toml
src-tauri/resources/: hotsheet  hotsheet-linux  hotsheet.cmd
src-tauri/src/: lib.rs  main.rs
(+1168 files in other folders)
