[package]
name = "hotsheet"
version = "0.9.0"
description = "Hot Sheet desktop app"
edition = "2021"

[lib]
name = "hotsheet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSImage", "NSBezierPath", "NSGraphics", "NSGraphicsContext", "NSColor", "NSShadow", "objc2-core-foundation"] }
objc2-foundation = { version = "0.3", features = ["NSData"] }
objc2-core-foundation = { version = "0.3", features = ["objc2"] }
